fix sidebar alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,7 +283,7 @@ h3 {
 
 .sidebar-inner {
     position: sticky;
-    top: 3rem;
+    top: 0;
 }
 
 .tagline {
